--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,9 @@ plugins {
 
 	// for publishing to the plugin portal
 	id 'com.gradle.plugin-publish' version '0.11.0'
-	id "nu.studer.credentials" version "2.1"
 
 	// for publishing snapshots
 	id 'maven-publish'
-	id 'org.hibernate.build.maven-repo-auth' version '3.0.3'
 
 	id 'idea'
 	id 'eclipse'
@@ -19,20 +17,12 @@ repositories {
 }
 
 ext {
-	pluginId = 'org.hibernate.build.xjc'
-	pluginVersion = '2.0.2-SNAPSHOT'
-
-	//noinspection GrUnresolvedAccess
-	publishKey = credentials.'hibernate.gradle.publish.key'
-	//noinspection GrUnresolvedAccess
-	publishSecret = credentials.'hibernate.gradle.publish.secret'
-
-	project.setProperty( 'gradle.publish.key', ext.publishKey )
-	project.setProperty( 'gradle.publish.secret', ext.publishSecret )
+	pluginId = 'com.olafmertens.xjc'
+	pluginVersion = '1.0.0'
 }
 
 
-group = 'org.hibernate.build.gradle'
+group = 'com.olafmertens.gradle'
 version = ext.pluginVersion
 
 sourceCompatibility = 1.8
@@ -49,14 +39,14 @@ gradlePlugin {
 	plugins {
 		xjcPlugin {
 			id = project.pluginId
-			implementationClass = 'org.hibernate.build.gradle.xjc.XjcPlugin'
+			implementationClass = 'com.olafmertens.gradle.xjc.XjcPlugin'
 		}
 	}
 }
 
 pluginBundle {
-	website = 'https://github.com/hibernate/gradle-xjc-plugin'
-	vcsUrl = 'https://github.com/hibernate/gradle-xjc-plugin'
+	website = 'https://github.com/olafmertens/gradle-xjc-plugin'
+	vcsUrl = 'https://github.com/olafmertens/gradle-xjc-plugin'
 	tags = ['jaxb','xjc']
 
 	plugins {
@@ -72,19 +62,14 @@ if ( version.toString().endsWith( '-SNAPSHOT' ) ) {
 	tasks.publishPlugins.enabled = false
 }
 
-tasks.publishPlugins {
-	doFirst {
-		if ( project.publishKey == null ) {
-			throw new RuntimeException( "`hibernate.gradle.publish.key` not found" )
-		}
-		if ( project.publishKey == null ) {
-			throw new RuntimeException( "`hibernate.gradle.publish.secret` not found" )
-		}
-	}
-}
-
 task compile
 tasks.compile.dependsOn tasks.compileJava, tasks.compileTestJava
+
+publishing {
+	repositories {
+		mavenLocal()
+	}
+}
 
 wrapper {
 	// To upgrade the version of gradle used in the wrapper, run:
